# birdsong-recognition-dataset

./: README.md  pyproject.toml  setup.py
.github/workflows/: ci.yml
doc/: CHANGELOG.md
doc/xsd/: AnnotationSchema.xsd
src/birdsongrec/: __about__.py  __init__.py  birdsongrec.py
src/koumura/: __about__.py  __init__.py  koumura.py
tests/: test_birdsongrec.py  test_koumura.py
