[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "birdsong-recognition-dataset"
description = "Functions for working with this data repository: https://figshare.com/articles/BirdsongRecognition/3470165"
version = "0.3.2"
authors = [
    {name = "David Nicholson", email = "nickledave@users.noreply.github.com"}
]
dependencies = [
    "numpy >=1.18.1"
]
requires-python = ">=3.8"
readme = "README.md"
license = {file = "LICENSE"}
classifiers = [
    'License :: OSI Approved :: BSD License',
    'Development Status :: 5 - Production/Stable',
    'Programming Language :: Python',
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3.8',
    'Programming Language :: Python :: 3.9',
    'Programming Language :: Python :: 3.10',
    'Programming Language :: Python :: Implementation :: CPython',
]

[project.optional-dependencies]
test = [
    "pytest >=6.2.2"
]

[project.urls]
Source = "https://github.com/NickleDave/birdsong-recognition-dataset"

[tool.flit.sdist]
exclude = [
    "tests/test_data"
]

[tool.flit.module]
name = "birdsongrec"
